agregando constantes y modificando implementaciones